# legal_word_drift

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: polysemy_pilot.yaml
notebooks/: 01_monosemous_word_exploration_21-04-2026.ipynb  results.ipynb  results_executed.ipynb
scripts/: run_pipeline.py
scripts/bert/: 11_build_bert_vocab.py  12_index_usages.py  13_extract_embeddings.py  14_compute_polysemy.py  15_compute_centroid_drift.py  16_plot_centroid_drift.py  17_compute_cross_period_apd.py  18_plot_cross_period_apd.py  19_compute_shift_quantiles.py  20_plot_quantile_ratio_heatmaps.py  21_pilot_polysemy.py  22_usage_count_diagnostic.py  23_monosemy_dip.py  24_compute_monosemous_drift.py  25_plot_monosemous_drift.py
scripts/data_processing/: 02_fetch_texts.py  04_detect_phrases.py
scripts/metrics/: 07_compute_metrics.py  07b_frequency_adjusted_drift.py
scripts/model/: 06_align_embeddings.py
scripts/plotting/: 08_visualize.py  09_visualize_drift.py  10_plot_embedding_landscape.py
src/: cjeu_cellar_client.py  models.py  text_fetcher.py  xhtml_parser.py
src/embeddings/: alignment.py  bert_encoder.py  bert_vocabulary.py  trainer.py  usage_collector.py  vocabulary.py
src/metrics/: clustering.py  dispersion.py  frequency.py  polysemy.py  shift.py  temporal_drift.py
src/pipeline/: 01_fetch_metadata.py  02_fetch_texts.py  03_preprocess.py  04_detect_phrases.py  05_train_embeddings.py  06_align_embeddings.py  07_compute_metrics.py  09_visualize_drift.py
src/preprocessing/: corpus_builder.py  (+2 more)
(+7 files in other folders)
